--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=LoadBalancer
 spring.datasource.url=jdbc:mysql://localhost:3306/delivery_service
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.username=springstudent
+spring.datasource.password=springstudent
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=create
 
